# FanVerse

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: app.py  data.py  insights.py
notebooks/: clustering.ipynb  fan_segments.json
notebooks/.ipynb_checkpoints/: clustering-checkpoint.ipynb
repository/: ingest.py  repository.json  repository.jsonl  repository_signals.json  retag_sports.py  schema.py  scraper_reddit.py  scraper_research.py  scraper_substack.py  scraper_youtube.py
repository/data/clients/: 5wins_repository.jsonl  allez_sports_repository.jsonl  montpellier_raw.jsonl  rosengard_raw.jsonl
repository/data/raw/: 5wins.json  5wins_sports_posts.json  AllezSports.json  dataset_instagram-scraper_2026-04-09_08-21-16-498.json  instagram_alitruwit.jsonl  instagram_allezsportstv.jsonl  instagram_ktrain11.jsonl  instagram_sideoutsociety.jsonl  instagram_strongerthanyouthink.jsonl  (+3 more)
repository/output/: 5wins_fan_intelligence_snapshot.md  allez_sports_fan_intelligence_snapshot.md  crux_football_brief.md  fan_segments_5wins.json  fan_segments_allez_sports.json  repository_signals_5wins.json  repository_signals_allez_sports.json  repository_signals_montpellier.json  repository_signals_rosengard.json  signals_reddit_output.json
repository/pipeline/: .gitignore-old  cleanup.py  clustering.py  convert_instagram.py  ingest.py  ingest_instagram.py  signal_extract.py
repository/scrapers/: scrape_specific_urls.py  scraper_reddit.py  scraper_substack.py  scraper_youtube.py
signal_extraction/: reddit.json  signal_extract.py  vader_test.py
(+1 files in other folders)
